--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,23 @@ services:
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
     restart: always             # run as a service
-
+  odoo14:
+    image: odoo:14.0
+    container_name: odoo14
+    depends_on:
+      - db
+    ports:
+      - "10021:8069"
+      - "10022:8072"
+    tty: true
+    command: -- --dev=reload
+#    command: odoo scaffold /mnt/extra-addons/test_module
+    environment:
+      - HOST=db
+      - USER=odoo
+      - PASSWORD=odoo
+    volumes:
+      - ./data:/var/lib/odoo
+      - ./addons:/mnt/extra-addons
+      - ./config:/etc/odoo
+    restart: always             # run as a service
