--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -5,8 +5,8 @@ db_host = db
 db_port = 5432
 db_user = odoo
 db_password = odoo
-db_name = odoo12
-addons_path = /usr/lib/python3/dist-packages/odoo/addons, /mnt/extra-addons
+;db_name = odoo12
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons,/mnt/extra-addons/addons
 data_dir = /var/lib/odoo
 ;auto_reload = True
 logfile = /etc/odoo/odoo-server.log
