--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -5,6 +5,6 @@ db_host = db
 db_port = 5432
 db_user = odoo
 db_password = odoo
-db_name = demo14
+;db_name = demo14
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 data_dir = /var/lib/odoo
