--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,28 +14,28 @@ services:
     volumes:
       - ./postgresql:/var/lib/postgresql/data
 
-  odoo12:
+#  odoo12:
 #    image: odoo:12.0
-    build: .
-    container_name: odoo12
-    depends_on:
-      - db
-    ports:
-      - "10069:8069"
-      - "10072:8072"
-    tty: true
-    command: -- --dev=reload
+#    build: .
+#    container_name: odoo12
+#    depends_on:
+#      - db
+#    ports:
+#      - "10069:8069"
+#      - "10072:8072"
+#    tty: true
+#    command: -- --dev=reload
 #    command: odoo scaffold /mnt/extra-addons/test_module
-    environment:
-      - HOST=db
-      - USER=odoo
-      - PASSWORD=odoo
-    volumes:
-      - ./data:/var/lib/odoo
-      - ./addons:/mnt/extra-addons
-      - ./etc:/etc/odoo
-      - odoo12-backup:/customs/backups
-    restart: always             # run as a service
+#    environment:
+#      - HOST=db
+#      - USER=odoo
+#      - PASSWORD=odoo
+#    volumes:
+#      - ./data:/var/lib/odoo
+#      - ./addons:/mnt/extra-addons
+#      - ./etc:/etc/odoo
+#      - odoo12-backup:/customs/backups
+#    restart: always             # run as a service
   odoo14:
     image: odoo:14.0
     container_name: odoo14
