update base struct odoo docker

--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:15
     environment:
       POSTGRES_USER: odoo
-      POSTGRES_PASSWORD: odoo17DB@2025
+      POSTGRES_PASSWORD: postgresDB@2025
       POSTGRES_DB: postgres
       POSTGRES_INITDB_ARGS: "--locale=en_US.UTF-8 --encoding=UTF8"
     restart: always 
