--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 include:
   
   - ./database/docker-compose.yml
-  - ./backend/docker-compose.yml
   - ./odoo17-ce/docker-compose.yml
   # - ./odoo18-ce/docker-compose.yml
   # - ./frontend/docker-compose.yml
-#  - ./nginx/docker-compose.yml
+ - ./nginx/docker-compose.yml
 
 
 networks:
