--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     container_name: postgres
     image: postgres:15
     environment:
-      POSTGRES_USER: odoo
-      POSTGRES_PASSWORD: postgresDB@2025
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: "--locale=en_US.UTF-8 --encoding=UTF8"
     restart: always 
     volumes:
