--- a/odoo18-ce/odoo.conf
+++ b/odoo18-ce/odoo.conf
@@ -1,12 +1,11 @@
 [options]
-addons_path = /mnt/extra-addons
+addons_path = /mnt/extra-addons,/mnt/odoo/odoo/addons,/mnt/odoo/addons
 data_dir = /var/lib/odoo
 admin_passwd = False
 
 without_demo = True
 
 db_user = odoo
-db_password = postgresDB@2025
 
 db_host = postgres
 db_filter = odoo18-ce
