--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     image: nginx:latest
     container_name: odoo-proxy
     ports:
-      - "80:80"
-      - "443:443"
+      - "${NGINX_HTTP_PORT}:80"
+      - "${NGINX_HTTPS_PORT}:443"
     volumes:
-      - ./config:/etc/nginx/conf.d
-      # - /home/ubuntu/media/Odoo/odoo-react/frontend/out/:/usr/share/nginx/html/frontend:ro
-    networks:
-      - odoo-network
-#    restart: always
+      - ./config/default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/odoo17-ce.conf:/etc/nginx/conf.d/odoo17-ce.conf
+    restart: always # run as a service
+    networks: 
+      - odoo-network  
     tty: true
