--- a/odoo17-ce/docker-compose.yml
+++ b/odoo17-ce/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     depends_on:
       - postgres
     ports:
-      - "10089:8069"
-      - "20089:8072" # live chat
+      - "${ODOO17_PORT}:8069"
+      - "${ODOO17_CHAT_PORT}:8072" # live chat
     tty: true
-    command: /mnt/odoo/odoo-bin --config=/etc/odoo/odoo.conf --logfile=/var/log/odoo/odoo-server.log
+    command: /mnt/odoo/odoo-bin --config=/etc/odoo/odoo.conf --logfile=/var/log/odoo/odoo-server.log -i web --db_password=${POSTGRES_PASSWORD}
     environment:
-      - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD=postgresDB@2025
-      - POSTGRES_DB=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./odoo/odoo/addons:/usr/lib/python3/dist-packages/odoo/addons/
       - ./odoo-addons/addons-customs/:/mnt/extra-addons
